<resources>
    <string name="app_name">BlackBirdv3</string>

    <string name="welcome">Welcome to BlackBird for Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="auth">Please login to Twitter to authenticate and allow BlackBird to access your account.</string>

    <!-- for search and view user button -->
    <string name="search_user">Search</string>
    <string name="view_tweets">View Tweets</string>
    <string name="user_prompt">Select one of the buttons below to view a timeline or run a query.</string>
    <string name="new_tweet">Compose</string>

</resources>
