<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_centerHorizontal="true"
        style="@style/textAppearance."
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="148dp"
        style="@style/textAppearance..auth"
        android:id="@+id/message" />


    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitter_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp">

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="on"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:id="@+id/view_tweets_button"
        android:text="@string/view_tweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="viewTweets"
        android:layout_below="@+id/search_button"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <Button android:id="@+id/compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_tweet"
        android:onClick="Notify"
        android:layout_alignTop="@+id/twitter_login_button"
        android:layout_centerHorizontal="true" />
    </LinearLayout>



</RelativeLayout>
